# doc-ufcn

./: .dockerignore  .flake8  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  config.json  evaluate.py  example_experiments.csv  experiments.csv  experiments_config.json  model_params.py  normalization_params.py  notify-slack.py  predict.py  pyproject.toml  requirements.txt  retrieve_experiments_configs.py  run_dla_experiment.sh  run_experiment.py  setup.py  test-requirements.txt  tox.ini  train.py  training-requirements.txt
ci/: build.sh  publish_models.py
data/: classes.txt
doc_ufcn/: image.py  main.py  model.py  models.py  prediction.py  utils.py
doc_ufcn/train/: __init__.py  cli.py  config.py  configuration.py  evaluate.py  experiment.py  mask.py  mlflow.py  mlflow_utils.py  normalization_params.py  predict.py  training.py
doc_ufcn/train/utils/: __init__.py  evaluation.py  object_metrics.py  pixel_metrics.py  prediction.py  preprocessing.py  training.py  training_pixel_metrics.py
flagged/: log.csv
flagged/output 1/: tmpmxxc7n1e.json
hugging_face/: app.py  config.json  config.py  config.yaml  hugging_face_config.py  tools.py
models/generic_page_detection/: README.md  parameters.yml
tests/: __init__.py  conftest.py  test_image.py  test_main.py  test_mask.py  test_model.py  test_models.py  test_prediction.py  test_train.py
tests/data/: page_generic.pth  test_json.json  test_params.yaml
tests/data/training/: config.json  model.pth
tools/: notify-slack.py  training-csv-config.py
training/: README.md  evaluate.py  example_experiments.csv  model_params.py  normalization_params.py  notify-slack.py  predict.py  requirements.txt  retrieve_experiments_configs.py  run_dla_experiment.sh  run_experiment.py  train.py
training/utils/: evaluation_utils.py  model.py  object_metrics.py  params_config.py  prediction_utils.py  preprocessing.py  training_utils.py
utils/: data.py  evaluation_utils.py  metrics.py  model.py  object_metrics.py  params_config.py  pixel_metrics.py  postprocessing.py  prediction_utils.py  preprocessing.py  testing_config.json  training_config.json  training_pixel_metrics.py  training_utils.py  utils.py
(+3 files in other folders)
